infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vkapp
  labels:
    name: vkapp
    environment: staging
